--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-native-vector-icons": "^6.4.13",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "^4.7.1",
